fix: align hidden inputs into rows

--- a/signup-page/css/sign-up.css
+++ b/signup-page/css/sign-up.css
@@ -72,8 +72,6 @@ body {
 }
 
 .input-box {
-    display: flex;
-    flex-direction: column;
     margin-bottom: 20px;
 }
 
